Initial commit of openapi-transformers
Create a repository for the transformers I've created for the
BambooHR REST API and Web API.

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "@kevinoid/project-template",
+  "name": "@kevinoid/openapi-transformers",
   "version": "0.0.1",
-  "description": "A Node.js/npm project template with codecov, coveralls, ESLint, conventional-changelog, nyc, JSDoc, and mocha.",
+  "description": "A collection of classes to transform OpenAPI documents.",
   "keywords": [
-    "project-template",
+    "openapi-transformers",
     "template"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/kevinoid/node-project-template",
-  "bugs": "https://github.com/kevinoid/node-project-template/issues",
+  "homepage": "https://github.com/kevinoid/openapi-transformers",
+  "bugs": "https://github.com/kevinoid/openapi-transformers/issues",
   "author": "Kevin Locke <kevin@kevinlocke.name>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kevinoid/node-project-template.git"
+    "url": "https://github.com/kevinoid/openapi-transformers.git"
   },
   "type": "commonjs",
   "files": [
     "*.js",
-    "bin/",
     "lib/",
     "!**/.*"
   ],
-  "main": "index.js",
-  "exports": {
-    ".": "./index.js"
-  },
-  "bin": {
-    "project-template": "bin/cmd.js"
-  },
   "//": "All scripts should run in POSIX sh and Windows cmd.exe",
   "scripts": {
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -u",
@@ -41,7 +33,6 @@
     "postpublish": "git -C doc push && git push --follow-tags origin main gh-pages && echo Remember to update GitHub Releases from CHANGELOG.md",
     "postversion": "rimraf doc && git clone -b gh-pages -l -q . doc && npm run doc && git -C doc add . && git -C doc commit -n -m \"Docs for v$npm_package_version\"",
     "preversion": "npm run test-cov && nyc check-coverage --statements 95 && depcheck --ignore-dirs doc && david && git-branch-is main && hub-ci-status -vv --wait",
-    "start": "supervisor --quiet --no-restart-on exit --extensions js,json --ignore test --poll-interval 2000 server.js",
     "test": "npm run lint && npm run test-unit",
     "test-cov": "npm run lint && npm run test-unit-cov",
     "test-unit": "node --throw-deprecation --unhandled-rejections=strict node_modules/mocha/bin/mocha --parallel --recursive test",
@@ -52,7 +43,9 @@
     "version-deps": "npm install conventional-changelog-cli david depcheck git-branch-is hub-ci-status"
   },
   "dependencies": {
-    "yargs": "^16.0.3"
+    "fast-json-stable-stringify": "^2.1.0",
+    "json-ptr": "^2.0.0",
+    "openapi-transformer-base": "^0.1.0"
   },
   "devDependencies": {
     "@kevinoid/eslint-config": "^15.0.0",
