--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "c8": "^7.0.0",
     "codecov": "^3.0.0",
     "coveralls": "^3.0.0",
+    "deep-freeze": "^0.0.1",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.18.2",
