--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "openapi-transformer-base": "^1.1.0"
   },
   "devDependencies": {
-    "@kevinoid/eslint-config": "^30.0.0",
+    "@kevinoid/eslint-config": "^31.0.0",
     "c8": "^8.0.0",
     "deep-freeze": "^0.0.1",
     "eslint": "^8.38.0",
@@ -56,6 +56,7 @@
     "eslint-plugin-jsdoc": "^46.0.0",
     "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-regexp": "^1.0.0",
     "eslint-plugin-unicorn": "^48.0.1",
     "jsdoc": "^4.0.0",
     "mocha": "^10.0.0",
@@ -75,6 +76,7 @@
       "eslint-plugin-jsdoc",
       "eslint-plugin-n",
       "eslint-plugin-promise",
+      "eslint-plugin-regexp",
       "eslint-plugin-unicorn"
     ]
   },
