--- a/package.json
+++ b/package.json
@@ -120,7 +120,8 @@
       "eslint-plugin-n",
       "eslint-plugin-promise",
       "eslint-plugin-regexp",
-      "eslint-plugin-unicorn"
+      "eslint-plugin-unicorn",
+      "rimraf"
     ]
   },
   "mocha": {
