Define exports in package.json
To ensure users can only import the modules we choose to export (e.g.
not lib/*).

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/package.json
+++ b/package.json
@@ -21,6 +21,49 @@
     "lib/",
     "!**/.*"
   ],
+  "exports": {
+    ".": "./index.js",
+    "./additional-properties-to-object.js": "./additional-properties-to-object.js",
+    "./additional-properties-to-unconstrained.js": "./additional-properties-to-unconstrained.js",
+    "./add-tag-to-operation-ids.js": "./add-tag-to-operation-ids.js",
+    "./add-x-ms-enum-name.js": "./add-x-ms-enum-name.js",
+    "./add-x-ms-enum-value-names.js": "./add-x-ms-enum-value-names.js",
+    "./binary-string-to-file.js": "./binary-string-to-file.js",
+    "./bool-enum-to-bool.js": "./bool-enum-to-bool.js",
+    "./clear-html-response-schema.js": "./clear-html-response-schema.js",
+    "./client-params-to-global.js": "./client-params-to-global.js",
+    "./const-to-enum.js": "./const-to-enum.js",
+    "./escape-enum-values.js": "./escape-enum-values.js",
+    "./exclusive-min-max-to-bool.js": "./exclusive-min-max-to-bool.js",
+    "./format-to-type.js": "./format-to-type.js",
+    "./inline-non-object-schemas.js": "./inline-non-object-schemas.js",
+    "./merge-subschemas.js": "./merge-subschemas.js",
+    "./nullable-not-required.js": "./nullable-not-required.js",
+    "./nullable-to-type-null.js": "./nullable-to-type-null.js",
+    "./openapi31to30.js": "./openapi31to30.js",
+    "./package.json": "./package.json",
+    "./path-parameters-to-operations.js": "./path-parameters-to-operations.js",
+    "./pattern-properties-to-additional-properties.js": "./pattern-properties-to-additional-properties.js",
+    "./queries-to-x-ms-paths.js": "./queries-to-x-ms-paths.js",
+    "./read-only-not-required.js": "./read-only-not-required.js",
+    "./ref-path-parameters.js": "./ref-path-parameters.js",
+    "./remove-default-only-response-produces.js": "./remove-default-only-response-produces.js",
+    "./remove-paths-with-servers.js": "./remove-paths-with-servers.js",
+    "./remove-query-from-paths.js": "./remove-query-from-paths.js",
+    "./remove-ref-siblings.js": "./remove-ref-siblings.js",
+    "./remove-request-body.js": "./remove-request-body.js",
+    "./remove-response-headers.js": "./remove-response-headers.js",
+    "./remove-security-scheme-if.js": "./remove-security-scheme-if.js",
+    "./remove-type-if.js": "./remove-type-if.js",
+    "./rename-components.js": "./rename-components.js",
+    "./replaced-by-to-description.js": "./replaced-by-to-description.js",
+    "./server-vars-to-path-params.js": "./server-vars-to-path-params.js",
+    "./server-vars-to-x-ms-parameterized-host.js": "./server-vars-to-x-ms-parameterized-host.js",
+    "./type-null-to-enum.js": "./type-null-to-enum.js",
+    "./type-null-to-nullable.js": "./type-null-to-nullable.js",
+    "./urlencoded-to-string.js": "./urlencoded-to-string.js",
+    "./x-enum-to-ms.js": "./x-enum-to-ms.js"
+  },
   "//": "All scripts should run in POSIX sh and Windows cmd.exe",
   "scripts": {
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -u",
