Create preversion script to check exports
It would be easy to forget to add or remove a class from package.json,
index.js, or README.md.  Check that all classes are present before
changing the package version.

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
   "overrides": [
     {
       "files": [
-        "bin/*.js"
+        "bin/*.js",
+        "scripts/*.js"
       ],
       "rules": {
         // Executable scripts are not expected to have exports
