Add autorest keyword
Since many/most of the transformers are for working around Autorest
issues.

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A collection of classes for transforming OpenAPI documents, particularly for compatibility with code generators like Autorest and OpenAPI Generator.",
   "keywords": [
+    "autorest",
     "openapi",
     "openapi-transformer",
     "swagger"
