Use json-schema-intersect
I've packaged this module as json-schema intersect to facilitate reuse
between projects and use by others.  Use it here as well.

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   "dependencies": {
     "fast-json-stable-stringify": "^2.1.0",
     "json-ptr": "^3.0.1",
+    "json-schema-intersect": "^0.1.0",
     "openapi-transformer-base": "^1.1.0"
   },
   "devDependencies": {
