split MergeSubschemas into Merge{AnyOf,AllOf,OneOf}
These transformers are logically separate.  Combining them and having
options to disable the individual transformations makes less sense than
allowing callers to run whichever transforms they want, however they
want.  It also makes it easier for users to override individual
transformations.

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "./exclusive-min-max-to-bool.js": "./exclusive-min-max-to-bool.js",
     "./format-to-type.js": "./format-to-type.js",
     "./inline-non-object-schemas.js": "./inline-non-object-schemas.js",
-    "./merge-subschemas.js": "./merge-subschemas.js",
+    "./merge-all-of.js": "./merge-all-of.js",
+    "./merge-any-of.js": "./merge-any-of.js",
+    "./merge-one-of.js": "./merge-one-of.js",
     "./nullable-not-required.js": "./nullable-not-required.js",
     "./nullable-to-type-null.js": "./nullable-to-type-null.js",
     "./openapi31to30.js": "./openapi31to30.js",
