--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "./add-tag-to-operation-ids.js": "./add-tag-to-operation-ids.js",
     "./add-x-ms-enum-name.js": "./add-x-ms-enum-name.js",
     "./add-x-ms-enum-value-names.js": "./add-x-ms-enum-value-names.js",
+    "./any-of-null-to-nullable.js": "./any-of-null-to-nullable.js",
     "./binary-string-to-file.js": "./binary-string-to-file.js",
     "./bool-enum-to-bool.js": "./bool-enum-to-bool.js",
     "./clear-html-response-schema.js": "./clear-html-response-schema.js",
